--- a/NativeAuthSampleApp/Base.lproj/Main.storyboard
+++ b/NativeAuthSampleApp/Base.lproj/Main.storyboard
@@ -188,10 +188,17 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lm0-Gq-7pZ">
+                                                            <rect key="frame" x="303" y="4" width="50" height="35"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <state key="normal" title="Button"/>
+                                                            <buttonConfiguration key="configuration" style="plain" image="play.circle.fill" catalog="system"/>
+                                                        </button>
                                                     </subviews>
                                                 </tableViewCellContentView>
                                                 <connections>
                                                     <outlet property="label" destination="AUG-F6-sBs" id="7CT-db-zQL"/>
+                                                    <outlet property="playButton" destination="Lm0-Gq-7pZ" id="J5G-dt-pyE"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
@@ -1192,6 +1199,7 @@
         <image name="lock.rotation" catalog="system" width="128" height="112"/>
         <image name="music.note" catalog="system" width="96" height="128"/>
         <image name="person.crop.circle" catalog="system" width="128" height="123"/>
+        <image name="play.circle.fill" catalog="system" width="128" height="123"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
