--- a/NativeAuthSampleApp/Base.lproj/Main.storyboard
+++ b/NativeAuthSampleApp/Base.lproj/Main.storyboard
@@ -158,28 +158,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="37" translatesAutoresizingMaskIntoConstraints="NO" id="qrM-Wi-RkQ">
-                                <rect key="frame" x="20" y="59" width="353" height="694"/>
+                                <rect key="frame" x="15" y="59" width="363" height="694"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Woodgrove Music" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ql-QL-hHb">
-                                        <rect key="frame" x="0.0" y="0.0" width="353" height="40.666666666666664"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hou-Ta-Jyi">
+                                        <rect key="frame" x="0.0" y="0.0" width="363" height="40.666666666666664"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="woodgrove icon" translatesAutoresizingMaskIntoConstraints="NO" id="Peb-9i-6Wm">
+                                                <rect key="frame" x="0.0" y="0.0" width="78.666666666666671" height="40.666666666666664"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Woodgrove Music   " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ql-QL-hHb">
+                                                <rect key="frame" x="78.666666666666657" y="0.0" width="284.33333333333337" height="40.666666666666664"/>
+                                                <color key="tintColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="v1R-LL-plh">
-                                        <rect key="frame" x="0.0" y="77.666666666666686" width="353" height="616.33333333333326"/>
+                                        <rect key="frame" x="0.0" y="77.666666666666686" width="363" height="616.33333333333326"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="nZn-6f-LFr" customClass="CustomTableViewCell" customModule="NativeAuthSampleApp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="50" width="353" height="43.666667938232422"/>
+                                                <rect key="frame" x="0.0" y="50" width="363" height="43.666667938232422"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nZn-6f-LFr" id="a6W-NY-aUA">
-                                                    <rect key="frame" x="0.0" y="0.0" width="353" height="43.666667938232422"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="363" height="43.666667938232422"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music.note" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZC3-dM-bNL">
-                                                            <rect key="frame" x="20" y="6" width="21" height="30"/>
+                                                            <rect key="frame" x="20" y="6" width="15" height="30"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <color key="tintColor" red="0.77374492790000005" green="0.14553061270000001" blue="0.72297365570000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AUG-F6-sBs">
                                                             <rect key="frame" x="56" y="11" width="256" height="21"/>
@@ -191,6 +201,7 @@
                                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lm0-Gq-7pZ">
                                                             <rect key="frame" x="303" y="4" width="50" height="35"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <color key="tintColor" red="0.77374492790000005" green="0.14553061270000001" blue="0.72297365570000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="plain" image="play.circle.fill" catalog="system"/>
                                                         </button>
@@ -204,16 +215,16 @@
                                         </prototypes>
                                     </tableView>
                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3zc-XS-YQw" userLabel="Results Stack View">
-                                        <rect key="frame" x="0.0" y="694" width="353" height="8"/>
+                                        <rect key="frame" x="0.0" y="694" width="363" height="8"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Results:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfD-fT-3rw">
-                                                <rect key="frame" x="0.0" y="0.0" width="353" height="0.0"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="363" height="0.0"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LHi-M3-ZZW">
-                                                <rect key="frame" x="0.0" y="8" width="353" height="0.0"/>
+                                                <rect key="frame" x="0.0" y="8" width="363" height="0.0"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -227,9 +238,9 @@
                         <viewLayoutGuide key="safeArea" id="vdW-vQ-Zwd"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="qrM-Wi-RkQ" firstAttribute="leading" secondItem="F7U-wo-INk" secondAttribute="leading" constant="20" id="8Iq-Z9-H5n"/>
+                            <constraint firstItem="qrM-Wi-RkQ" firstAttribute="leading" secondItem="F7U-wo-INk" secondAttribute="leading" constant="15" id="8Iq-Z9-H5n"/>
                             <constraint firstItem="qrM-Wi-RkQ" firstAttribute="top" secondItem="vdW-vQ-Zwd" secondAttribute="top" id="GyX-uh-D2x"/>
-                            <constraint firstItem="vdW-vQ-Zwd" firstAttribute="trailing" secondItem="qrM-Wi-RkQ" secondAttribute="trailing" constant="20" id="V4T-iW-jIk"/>
+                            <constraint firstItem="vdW-vQ-Zwd" firstAttribute="trailing" secondItem="qrM-Wi-RkQ" secondAttribute="trailing" constant="15" id="V4T-iW-jIk"/>
                             <constraint firstItem="vdW-vQ-Zwd" firstAttribute="bottom" secondItem="qrM-Wi-RkQ" secondAttribute="bottom" constant="16" id="q5Q-Iw-o7D"/>
                         </constraints>
                     </view>
@@ -1200,6 +1211,7 @@
         <image name="music.note" catalog="system" width="96" height="128"/>
         <image name="person.crop.circle" catalog="system" width="128" height="123"/>
         <image name="play.circle.fill" catalog="system" width="128" height="123"/>
+        <image name="woodgrove icon" width="32" height="32"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
